# coinbase_scraper

./: .gitignore  Cargo.toml  PERFORMANCE.md  README.md
migrations/: 001_initial.sql
python_benchmark/: scrape_cmc.py  scrape_requests.py  test_repeated.py  test_timing.py
src/: database.rs  export.rs  fetch.rs  lib.rs  main.rs  model.rs
src/api/: mod.rs  routes.rs
