[package]
name = "coinbase_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.23", features = ["gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
scraper = "0.24.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
csv = "1.3.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"