[package]
name = "coinbase_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.23", features = ["gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
scraper = "0.24.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
csv = "1.3.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }